--- a/packages/default/scss/treelist/_layout.scss
+++ b/packages/default/scss/treelist/_layout.scss
@@ -7,7 +7,8 @@
         }
 
         .k-status {
-            padding: .4em .6em;
+            padding-block: .4em;
+            padding-inline: .6em;
             line-height: 1.6em;
 
             // TODO: see what this does and use a better name
