--- a/packages/nouvelle/scss/chip/_layout.scss
+++ b/packages/nouvelle/scss/chip/_layout.scss
@@ -43,7 +43,7 @@
     .k-chip-content {
         margin-block: -.5em;
         padding-block: .5em;
-        padding: .5em 0;
+        padding-inline: 0;
         min-width: 0;
         display: flex;
         flex-flow: row nowrap;
