--- a/packages/default/scss/bottom-navigation/_layout.scss
+++ b/packages/default/scss/bottom-navigation/_layout.scss
@@ -2,7 +2,8 @@
 
     // Bottom Navigation
     .k-bottom-nav {
-        padding: $kendo-bottom-nav-padding-y $kendo-bottom-nav-padding-x;
+        padding-block: $kendo-bottom-nav-padding-y;
+        padding-inline: $kendo-bottom-nav-padding-x;
         width: 100%;
         border-width: 0;
         border-style: solid;
@@ -38,7 +39,8 @@
 
     // Items
     .k-bottom-nav-item {
-        padding: $kendo-bottom-nav-item-padding-y $kendo-bottom-nav-item-padding-x;
+        padding-block: $kendo-bottom-nav-item-padding-y;
+        padding-inline: $kendo-bottom-nav-item-padding-x;
         min-width: $kendo-bottom-nav-item-min-width;
         max-width: $kendo-bottom-nav-item-max-width;
         min-height: $kendo-bottom-nav-item-min-height;
@@ -69,7 +71,8 @@
 
         > .k-bottom-nav-link {
             margin: (-$kendo-bottom-nav-item-padding-y) (-$kendo-bottom-nav-item-padding-x);
-            padding: $kendo-bottom-nav-item-padding-y $kendo-bottom-nav-item-padding-x;
+            padding-block: $kendo-bottom-nav-item-padding-y;
+            padding-inline: $kendo-bottom-nav-item-padding-x;
             width: 100%;
             color: inherit;
             display: flex;
