--- a/packages/fluent/scss/chip/_layout.scss
+++ b/packages/fluent/scss/chip/_layout.scss
@@ -55,7 +55,8 @@
 
     // Chip content
     .k-chip-content {
-        padding: .5em 0;
+        padding-block: .5em;
+        padding-inline: 0;
         margin: -.5em 0;
         min-width: 0;
         display: flex;
